# Parallel-Programming

./: README.md
Cluster/: CMakeLists.txt  cluster.cpp  utils.hpp
DE-Solver/: CMakeLists.txt  DE-Solver.c
OpenMP-SLE-Solver/: CMakeLists.txt  main.cpp  main1.cpp  main1.h
ParallelMatrixMultiplier/: CMakeLists.txt  MatrixOperations.cpp  MatrixOperations.h  ParallelMatrixMultiplier.cpp
SLE-Solver/: CMakeLists.txt  Lab1_Khaetskaya_19202.docx  ParallelSolver.cpp  lab1.clog2  lab12.clog2
